@@ -1,5 +1,6 @@
 - Add option to hide status panel
 - Remember status panel position between loads
+- Add status panel dragging on button right-click
 - Add 'reset position' button to options panel
 - Reorganize options panel tabs
 
